Fixed text alignement and colors

--- a/styles.css
+++ b/styles.css
@@ -2,20 +2,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: #222;
 }
 
 .topBanner{
     margin: 0px auto;
-    color: #353535;
     background-color: #e29578;
     text-align: center;
-    text-shadow: ;
 }
 
 .bottomBanner
 {
     margin: 0px auto;
-    color: #353535;
     background-color: #e29578;
     text-align: center;
 }
@@ -24,14 +22,14 @@
     display: flex;
     flex-direction: column;
     padding: 10vh 0px;
-    color: #353535;
     background-color:#edf6f9;
+    text-align: center;
 }
 
 .container{
     width: 100%;
     height: 250vh;
-    background: linear-gradient(#edf6f9,#ffddd2);
+    background: linear-gradient(#edf6f9,#efd3d7,#ffddd2);
     display: flex;
     align-items: center;
     justify-content: center;
